# NURE-labs

./: LICENSE  README.md
2.1/: CMakeLists.txt  Mmath_descr.doc  README.md
2.1/lab_2.1.1/: lab_2.1.1.sln
2.1/lab_2.1.1/lab_2.1.1/: ReadMe.txt  lab_2.1.1.cpp  lab_2.1.1.vcxproj  lab_2.1.1.vcxproj.filters  stdafx.cpp
2.1/lab_2.1.1/lab_2.1.1/libs/: DivTest.CPP  DivTest.h  Example_PQ.h  Primes.cpp
2.1/lab_2.1.2/lab_2.1.2/: Source.cpp  lab_2.1.2.vcxproj
2.1/lab_2.1.3/: Source.cpp  lab_2.1.3.sln  lab_2.1.3.vcxproj
2.1/lab_2.1.4/: lab_2.1.4.sln
2.1/lab_2.1.4/lab_2.1.4/: lab_2.1.4.vcxproj  main.cpp
2.1/lab_2.1.4v2/: lab_2.1.4v2.sln
2.1/lab_2.1.4v2/Debug/: lab_2.1.4v2.ilk
2.1/lab_2.1.4v2/lab_2.1.4v2/: Source.cpp  lab_2.1.4v2.vcxproj
2.1/lab_2.1.4v2/lab_2.1.4v2/Debug/: vc120.idb
2.1/lab_2.1.4v2/lab_2.1.4v2/Debug/lab_2.1.4v2.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  lab_2.1.4v2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2.2/: README.md
2.2/DoubleLinkedList/: CMakeLists.txt  implementation.c  main.c
2.2/lab_2.2.1/: CMakeLists.txt  lab_2.2.1.sdf  lab_2.2.1.sln
2.2/lab_2.2.1/Debug/: lab_2.2.1.ilk
2.2/lab_2.2.2/: CMakeLists.txt  Header.h  Source.cpp  declaration.h  implementation.c  main.c  main.cpp
2.2/lab_2.2.3/: CMakeLists.txt  Integer.cpp  Integer.h  main.cpp
2.2/lab_2.2.4/: CMakeLists.txt  Integer.cpp  Integer.h  main.cpp
2.2/lab_2.2.5/: CMakeLists.txt  main.cpp
2.2/lab_2.2.6/: CMakeLists.txt  main.cpp
lab_2.2.1/: lab_2.2.1.sdf
lab_2.2.1/lab_2.2.1/: main.cpp
(+14 files in other folders)
